; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/jscript/extr_caller.c_strcmp_wa.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/jscript/extr_caller.c_strcmp_wa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @strcmp_wa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @strcmp_wa(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca [512 x i32], align 16
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @CP_ACP, align 4
  %7 = load i32, i32* %3, align 4
  %8 = getelementptr inbounds [512 x i32], [512 x i32]* %5, i64 0, i64 0
  %9 = call i32 @WideCharToMultiByte(i32 %6, i32 0, i32 %7, i32 -1, i32* %8, i32 2048, i32 0, i32 0)
  %10 = getelementptr inbounds [512 x i32], [512 x i32]* %5, i64 0, i64 0
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @lstrcmpA(i32* %10, i8* %11)
  ret i32 %12
}

declare dso_local i32 @WideCharToMultiByte(i32, i32, i32, i32, i32*, i32, i32, i32) #1

declare dso_local i32 @lstrcmpA(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
